修改 blog 的描述信息和图标

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>JavaGuide</title>
+    <!-- <title>JavaGuide</title> -->
+    <title>Android Guide</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="description" content="Description" />
     <meta
@@ -30,8 +31,10 @@
         navigator.serviceWorker.register("sw.js");
       }
       window.$docsify = {
-        name: "JavaGuide",
-        repo: "https://github.com/Snailclimb/JavaGuide",
+        // name: "JavaGuide",
+        // repo: "https://github.com/Snailclimb/JavaGuide",
+        name: "Android Guide",
+        repo: "https://github.com/zengkaiqiang562/JavaGuide",
         maxLevel: 4, //最大支持渲染的标题层级
         //封面,_coverpage.md
         //coverpage: true,
@@ -47,14 +50,14 @@
           depth: 6,
         },
         // 备案
-        beian: {
+        /* beian: {
           ICP: "鄂ICP备2020015769号",
           NISMSP: {
             number: "",
             url: "",
             id: "",
           },
-        },
+        }, */
         // 字数统计
         count: {
           countable: true,
